src/program/latex/snapshots/quil_rs__program__latex__tests__modifiers__modifier_dagger_dagger.snap
---
source: src/program/latex/mod.rs
assertion_line: 942
expression: "r#\"\\documentclass[convert={density=300,outext=.png}]{standalone}\n\\usepackage[margin=1in]{geometry}\n\\usepackage{tikz}\n\\usetikzlibrary{quantikz}\n\\begin{document}\n\\begin{tikzcd}\n\\lstick{\\ket{q_{0}}} & \\gate{Y^{\\dagger}^{\\dagger}} & \\qw\n\\end{tikzcd}\n\\end{document}\"#"
---
\documentclass[convert={density=300,outext=.png}]{standalone}
\usepackage[margin=1in]{geometry}
\usepackage{tikz}
\usetikzlibrary{quantikz}
\begin{document}
\begin{tikzcd}
\lstick{\ket{q_{0}}} & \gate{Y^{\dagger}^{\dagger}} & \qw
\end{tikzcd}
\end{document}
